update KI dokumente

--- a/docs/LaTeX/listing_settings.tex
+++ b/docs/LaTeX/listing_settings.tex
@@ -10,7 +10,7 @@
     captionpos=t,  % Position der Bildunterschrift
     breakatwhitespace=false,  % Zeilenumbruch bei Leerzeichen
     title=\lstname,  % Titel des Listings
-    keywordstyle=\color{DodgerBlue4},  % Stil für Schlüsselwörter
+    keywordstyle=\color{black},  % Stil für Schlüsselwörter
     commentstyle=\color{gray33},  % Stil für Kommentare
     stringstyle=\color{DarkOrange},  % Stil für Strings
     %morekeywords={std, cout, endl},  % Zusätzliche Schlüsselwörter
