--- a/docs/LaTeX/colors_settings.tex
+++ b/docs/LaTeX/colors_settings.tex
@@ -4,3 +4,4 @@
 \definecolor{DarkOrange}{rgb}{1.0, 0.55, 0}
 \definecolor{DarkSlateGray}{rgb}{0.18,0.31,0.31}
 \definecolor{gray33}{rgb}{0.33,0.33,0.33}
+\definecolor{meinblue}{RGB}{3, 78, 154} % #034E9A
